--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,24 @@
-<h1>Here is a list of all users</h1>
+<section class="container">
+    <% @users.each do |user|%>
+        <div class="user">
+            <div class="user-photo">
+                <img src="<%= user.photo %>" alt="User Photo">
+            </div>
+            <div class="user-info">
+                <%= link_to user_url(user), class: 'name' do %>
+                    <h2><%= user.name %></h2>
+                <% end %>
+
+                <div class="user-posts">
+                    <span>Number of Posts:
+                        <% if user.posts_counter %>
+                            <%= user.posts_counter %>
+                        <% else %>
+                            0
+                        <% end %>
+                    </span>
+                </div>
+            </div>
+        </div>
+    <% end %>
+</section>
