--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -58,6 +58,9 @@
     <% end %>
 
     <div class="btn-link">
+        <button>
+           <%= link_to 'Add New Post', new_user_post_path(@user) %>
+        </button>
         <button>Pagination</button>
     </div>
 </section>
