--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,10 +104,14 @@ a {
   align-self: center;
 }
 
+.btn-link,
 .btn-link button {
   cursor: pointer;
   padding: 5px;
   font-size: 15px;
+}
+
+button {
   border-bottom: 5px solid black;
   border-right: 3px solid black;
   border-radius: 5px;
@@ -121,6 +125,7 @@ a {
   padding: 1rem;
   gap: 1rem;
   border: 3px solid black;
+  background-color: #f5f5f5;
 }
 
 .comments,
@@ -141,4 +146,11 @@ a {
   border-bottom: 5px solid black;
   border-right: 3px solid black;
   border-radius: 5px;
+}
+
+.form-elements {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin: 1rem 0;
 }
