--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <% if notice %>
+      <p style="color: green" class="notice"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p style="color: red" class="alert"><%= alert %></p>
+    <% end %>
+
     <%= yield %>
+
   </body>
 </html>
