--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsBlogApp</title>
+    <title>Rails Blog App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,13 +11,17 @@
   </head>
 
   <body>
-    <% if notice %>
+    <p class="navbar-text float-right">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.name %></strong>.
+      <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
+      <%= link_to "Logout", destroy_user_session_path, data: { "turbo-method": :delete }, class: "navbar-link"  %>
+    <% end %>
+    </p>
+      <% if notice %>
       <p style="color: green" class="notice"><%= notice %></p>
     <% end %>
 
-    <% if alert %>
-      <p style="color: red" class="alert"><%= alert %></p>
-    <% end %>
 
     <%= yield %>
 
