--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,12 @@
   border: 3px solid black;
 }
 
+.user-photo img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
 .user-info {
   width: 46%;
   display: flex;
