--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <% @posts.each do |post| %>
+    <% @user.posts.each do |post| %>
         <div class = "post">
            <%= link_to user_post_url(user_id: @user.id, id: post.id), class: 'post-link' do %>
              <h3>Post #<%= @user.posts.index(post) + 1 %></h3>
@@ -47,9 +47,9 @@
         </div>
 
         <div class="post-comments">
-            <% post.recent_comments.each do |comment| %>
+            <% post.comments.each do |comment| %>
                 <div class="comment">
-                    <span class="comment-author"><%= comment.user.name %>:</span>
+                    <span class="comment-author"><%= comment.author.name %>:</span>
                     <span><%= comment.text %></span>
                 </div>
             <% end %>
