--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,39 +16,63 @@
                         0
                     <% end %>
                 </p>
+
+                <%if @user.name === current_user.name %>
+                    <button>
+                        <%= link_to ' Add New Post ', new_user_post_path(@user) %>
+                    </button>
+                <%end%>
             </div>
         </div>
     </div>
-        
-    <div class="user-bio">
-        <p><%= @user.bio %></p>
-    </div>
+    
+    <% if @user.bio%>
+        <div class="user-bio">
+            <p><%= @user.bio %></p>
+        </div>
+    <% end %>
 
-    <% @user.recent_posts.each do |post| %>
-        <div class = "post">
+    <div class = "post">
+        <% @user.recent_posts.each do |post| %>
            <%= link_to user_post_url(user_id: @user.id, id: post.id), class: 'post-link' do %>
              <h3>Post #<%= @user.posts.index(post) + 1 %></h3>
            <% end %>
+
            <p><%= post.text %></p>
             <div class="count">
-               <span>Comments:
-               <% if post.comments_counter %>
-                <%= post.comments_counter %>,
+               <span>
+                Comments:
+                <% if post.comments_counter %>
+                    <%= post.comments_counter %>,
                 <% else %>
-                0,
+                    0,
                 <% end %>
                 </span>
-               <span>Likes:
-               <% if post.likes_counter %>
-               <%= post.likes_counter %>
+               <span>
+                Likes:
+                <% if post.likes_counter %>
+                    <%= post.likes_counter %>
                 <% else %>
-                0
+                    0
                 <% end %>
                 </span>
+  
+                <% if can? :destroy, post %>
+                    <%= link_to user_post_url(post.author_id, id: post.id), method: :delete, class: 'btn-link' do %>
+                        <button>Delete Post</button>
+                    <% end %>
+                <% end %>
             </div>
-        </div>
-   <% end %>
-   <%= link_to user_posts_url(@user.id), class: 'btn-link' do %>
-     <button>See all posts</button>
-   <% end %>
+        <% end %>
+    </div>
+
+    <%= link_to user_posts_url(@user.id), class: 'btn-link' do %>
+        <button>
+            <% if @user.posts_counter > @user.recent_posts.length %>
+                See All Posts
+            <% else %>
+                See Posts Details
+            <% end %>
+        </button>
+    <% end %>
 </section>
