--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,7 +7,7 @@
 .wrapper {
   margin: 1rem auto;
   gap: 1rem;
-  box-shadow: 0px 0px 2px 2px rgb(231, 231, 237);
+  box-shadow: 0 0 2px 2px rgb(231, 231, 237);
 }
 
 .wrapper,
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: whitesmoke
+  background-color: whitesmoke;
 }
 
 .navbar {
@@ -37,7 +37,6 @@
   padding: 5px 10px;
   font-size: 15px;
   font-weight: bold;
-  
 }
 
 .user {
@@ -135,10 +134,6 @@ a {
   gap: 1rem;
 }
 
-.like_count_btn button {
-  width: auto;
-}
-
 .post-comments {
   width: 100%;
   display: flex;
@@ -156,6 +151,10 @@ button {
   border-right: 3px solid black;
   border-radius: 5px;
   padding: 5px;
+}
+
+.like_count_btn button {
+  width: auto;
 }
 
 .btn-link,
@@ -187,11 +186,6 @@ button {
 .comments {
   display: grid;
   grid-template-columns: 0.5fr 2.5fr 0.5fr;
-}
-
-.comments form {
-  width: auto;
-  align-self: flex-end;
 }
 
 .post .add-comment {
@@ -245,6 +239,11 @@ form {
 form input {
   width: 30vw;
   padding: 0.5rem;
+}
+
+.comments form {
+  width: auto;
+  align-self: flex-end;
 }
 
 .shared {
