--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,7 +23,7 @@
                         <% end %>
                     </span>
                     <%= form_with(model: Like.new, url: like_user_post_path(@post.author, @post)) do |form| %>
-                    <%= form.button type: :submit, class: 'like-button' do %>
+                    <%= form.button type: :submit do %>
                         &#9829; 
                     <% end %>
                     <% end %>
