--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,7 +40,7 @@
                         <% end %>
                     <% end %>
                 </div>
-                <div>
+                <div class="user-comments-likes">
                     <span>Comments:
                         <% if post.comments_counter %>
                         <%= post.comments_counter %>
