--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,7 +47,7 @@
                         <% end %>
                     <% end %>
                 </div>
-                <div>
+                <div class="user-comments-likes">
                     <span>Comments:
                         <% if post.comments_counter %>
                             <%= post.comments_counter %>,
